unpackaged/main/default/objects/project_cloud__Working_Hours__c/project_cloud__Working_Hours__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Define the hours in a day a User works
Currently this is only used by the Profitability &amp; Utilization Extension. It is not used by the Project Cloud package</description>
    <label>Working Hours</label>
</CustomObject>