unpackaged/main/default/objects/project_cloud__Working_Hours__c/fields/project_cloud__Availability_Hourspan__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Availability_Hourspan__c</fullName>
    <defaultValue>&quot;0-2,2-4,4-8,8-*&quot;</defaultValue>
    <description>This field is used by the Resources Load Tab for determining the highlighting of a Users Allocations. It is a Tab separated list of hour intervals. The spans are for highlighting the number in a range: Green, No Highlighting, Yellow, Red e.g 0-4,4-* is green if the number is between 0 and 4, or no highlighting otherwise. 0-2,2-4,4-8,8-* is 0-2 Green, 2-4 No Highlight, 4-8 Yellow, 8+ Red</description>
    <inlineHelpText>Numbers indicate the hours in a day that trigger color changes in loading Green, White, Yellow, Red. 0-2,2-4,4-8,8-* Displays Green under 2 hours, White 2 to 4 hours, Yellow 4-8 hours and Red over 8 hours</inlineHelpText>
    <label>Resource Loading Indicators</label>
    <length>40</length>
    <type>Text</type>
</CustomField>