unpackaged/main/default/objects/project_cloud__Working_Hours__c/fields/project_cloud__Days_In_Week__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Days_In_Week__c</fullName>
    <description>This custom setting has been deprecated. The values are now project/project task specific.</description>
    <label>Deprecated (Days In Week)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>