unpackaged/main/default/objects/project_cloud__Working_Hours__c/fields/project_cloud__Hours_In_Day__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_In_Day__c</fullName>
    <description>This custom setting has been deprecated. The values are now project/project task specific.</description>
    <label>Deprecated (Hours In Day)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>