unpackaged/main/default/objects/project_cloud__Working_Hours__c/fields/project_cloud__Hours_in_Day_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_in_Day_Wednesday__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Hours in Day - Wednesday</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>