unpackaged/main/default/objects/project_cloud__Working_Hours__c/fields/project_cloud__Use_Settings_Only__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Use_Settings_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable calculations of working days on a project or task basis and use the default custom setting exclusively</description>
    <label>Use custom settings only</label>
    <type>Checkbox</type>
</CustomField>